Shear doesn't work as expected with Individual Origins on #46434

Closed
opened 2015-10-10 00:57:16 +02:00 by Adam Preisler · 6 comments

Shear Shortcut (Ctrl+Shift+Alt+S)

Individual origins Screen Shot 10-10-15 at 12.56 AM.PNG

Grab translates each island separately (given non-global transform orientation)
Rotate rotates each island separately.
Scale scales each island separately.

But shear shears island locations instead of islands themselves.

Not that I don't like such functionality, it's just not what is expected from it.

I see similarity to this: ManipulateCenterPoints.jpg Maybe it could be implemented into Edit Mode for scale too? A lot of operators have additional controls, this could be the additional control for Scale, Rotate, Shear?

Shear Shortcut (Ctrl+Shift+Alt+S) Individual origins ![Screen Shot 10-10-15 at 12.56 AM.PNG](https://archive.blender.org/developer/F243807/Screen_Shot_10-10-15_at_12.56_AM.PNG) Grab translates each island separately (given non-global transform orientation) Rotate rotates each island separately. Scale scales each island separately. But shear shears island locations instead of islands themselves. Not that I don't like such functionality, it's just not what is expected from it. I see similarity to this: ![ManipulateCenterPoints.jpg](https://archive.blender.org/developer/F243805/ManipulateCenterPoints.jpg) Maybe it could be implemented into Edit Mode for scale too? A lot of operators have additional controls, this could be the additional control for Scale, Rotate, Shear?
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AdamPreisler

Added subscriber: @AdamPreisler
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by c2ce38b102

This issue was referenced by c2ce38b102e0cec0947bedc40b289d93350efdb3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46434
No description provided.