Fix T46434: Shear w/ local-center & editmode fails